tests/errors/E018.zen
bool main() {
    return 1 && 2;  // E018: Logical operator used with non-boolean operands
}
